--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,47 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffffff;
+    --foreground: #171717;
+    --mainbg: #EDE9FF80;
+    --bgcolor: #fff;
+    --fgcolor: #000;
+    --inverted: 0;
+    --altinverted: 1;
+    --contrasttext: #8468ea;
+    --maincolor: #8468ea;
+    --maincolor-hover: #7a63dd;
+    --maincolor-active: #8468ea;
+    --taboncolor:#DDD6F8;
+    --header: #8468ea;
+    --mainpurple: #4f34c5;
+    --titlecolor: #26065d;
+    --topcolor: #dcd6f6;
+    --light-grey: #888;
+    --light-grey-alternative: #f2f2f2;
+    --secondary: #26065d;
+    --secondary-dark: #252525;
+    --secondary-grey: #5e5e5e;
+    --secondary-grey-shade: #65686b;
+    --secondary-light-grey: #dadada;
+    --secondary-light-grey-alternative: #f8f8f8;
+    --secondary-grey-shade-dark: #373839;
+    --black: #222;
+    --white: #fff;
+    --red: red;
+    --font: "Inter", sans-serif;
+    --big-size: 1.5rem;
+    --heading-size: 1.25rem;
+    --weight: 700;
+    --text-size: 1rem;
+    --radius: 2rem;
+    --bigradius: 1rem;
+    --biggerradius: 1.5rem;
+    --font-regular: 1rem;
+    --font-big: 1.125rem;
+    --font-small: 0.75rem;
+    --button-padding: 1rem 1rem;
+    --darkoverlay: rgba(0, 0, 0, .5);
+    --darkoverlaybackdrop: 0rem;
+    --tabOn: #ddd6f8;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,9 +60,6 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
