--- a/app/training-program-exercise/page.module.css
+++ b/app/training-program-exercise/page.module.css
@@ -64,7 +64,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 0.3rem;
+            gap: 0.2rem;
+            padding-bottom: 1.2rem;
         }
     }
 
@@ -77,14 +78,6 @@
         max-height: 100%;
         width: 100%;
         max-width: 30rem;
-
-        .video {
-            width: 100%;
-            margin: 1.5rem 0;
-            max-height: 16rem;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-        }
 
         .descriptionContainer {
             display: flex;
@@ -100,7 +93,7 @@
                 flex-direction: column;
                 justify-content: center;
                 width: 100%;
-                padding: 0 1.2rem;
+                padding: 1.2rem;
                 gap: 1rem;
 
                 .iconContainer {
@@ -165,4 +158,21 @@
 
         }
     }
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    overflow: hidden;
+    width: 100%;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
