--- a/app/training-program-plan/page.module.css
+++ b/app/training-program-plan/page.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 1.5rem;
     min-height: 100vh;
     width: 100%;
     background-color: var(--mainbg);
@@ -68,14 +69,6 @@
     width: 100%;
     max-width: 30rem;
 
-    .video {
-        width: 100%;
-        margin: 1.5rem 0;
-        max-height: 16rem;
-        aspect-ratio: 1 / 1;
-        object-fit: cover;
-    }
-
     .pictureDiv {
         width: 100%;
         margin: 1.5rem;
@@ -95,7 +88,7 @@
         flex-direction: column;
         justify-content: center;
         width: 100%;
-        padding: 0 1.2rem;
+        padding: 1.2rem;
         gap: 1rem;
     }
 
@@ -147,4 +140,21 @@
             font-weight: var(--weight);
         }
     }
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    overflow: hidden;
+    width: 100%;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
