--- a/app/[day]/training-program/page.module.css
+++ b/app/[day]/training-program/page.module.css
@@ -75,16 +75,6 @@
     width: 100%;
     max-width: 30rem;
 
-    .buttonContainer {
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        padding: 0 1.2rem;
-        gap: 1rem;
-    }
-
     .descriptionContainer {
         display: flex;
         flex-direction: column;
@@ -99,7 +89,83 @@
             color: var(--fgcolor);
             text-align: center;
         }
+
+        .buttonContainer {
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            padding: .5rem 1.2rem;
+            gap: 1rem;
+
+            .completedButton {
+                position: relative;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.5rem;
+                padding: var(--button-padding);
+                border-radius: var(--radius);
+                background: var(--maincolor);
+                color: #fff;
+                font-size: var(--font-regular);
+                font-weight: 700;
+                font-family: inherit;
+                cursor: pointer;
+                border: none;
+                outline: none;
+            }
+
+            .completedButton:hover {
+                background: var(--maincolor-hover);
+            }
+
+            .checkedButton {
+                display: inline-block;
+                width: 1.2rem;
+                height: 1.2rem;
+                background: url("../../assets/check.svg") no-repeat center;
+                background-size: contain;
+            }
+        }
+
+        .checkContainer {
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            width: 100%;
+            padding-right: .2rem;
+
+            .checked {
+                background: url("../../assets/check.svg") no-repeat center;
+                background-size: contain;
+                display: inline-block;
+                width: 1.2rem;
+                height: 1.2rem;
+            }
+
+            .unchecked {
+                background: url("../../assets/unchecked.svg") no-repeat center;
+                background-size: contain;
+                display: inline-block;
+                width: 1.2rem;
+                height: 1.2rem;
+            }
+
+            .iconButton {
+                background: none;
+                border: none;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+        }
     }
+
 
     .descriptionItem {
         display: flex;
@@ -110,25 +176,6 @@
         background: var(--bgcolor);
         padding: .8rem;
         gap: .3rem;
-
-        .checkContainer {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            width: 100%;
-            gap: 0.2rem;
-            padding: 0 0;
-
-            .check {
-                display: inline-block;
-                width: 1.1rem;
-                height: 1.1rem;
-                background-image: url("../../assets/check.svg");
-                background-size: contain;
-                background-repeat: no-repeat;
-                margin-right: 0.2rem;
-            }
-        }
 
 
         .iconContainer {
