--- a/app/[day]/training-program/page.module.css
+++ b/app/[day]/training-program/page.module.css
@@ -75,6 +75,19 @@
     width: 100%;
     max-width: 30rem;
 
+    .pictureDiv {
+        width: 100%;
+        margin: 1.5rem;
+        max-height: 16rem;
+        aspect-ratio: auto;
+        aspect-ratio: 1/1;
+        background-image: url('../../assets/traningsprogram.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: center;
+    }
+
     .descriptionContainer {
         display: flex;
         flex-direction: column;
