Refactor code structure for improved readability and maintainability for images

--- a/app/training-program-exercise/page.module.css
+++ b/app/training-program-exercise/page.module.css
@@ -90,6 +90,17 @@
             background-size: 100%;
             background-position: center;
         }
+        .fallbackImage {
+            width: 100%;
+            margin: 1rem;
+            max-height: 16rem;
+            aspect-ratio: auto;
+            aspect-ratio: 1/1;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            background-position: center;
+        }
 
         .descriptionContainer {
             display: flex;
