--- a/app/[day]/training-program/page.module.css
+++ b/app/[day]/training-program/page.module.css
@@ -88,6 +88,18 @@
         background-position: center;
     }
 
+    .fallbackImage {
+        width: 100%;
+        margin: 1.5rem;
+        max-height: 16rem;
+        aspect-ratio: auto;
+        aspect-ratio: 1/1;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: center;
+    }
+
     .descriptionContainer {
         display: flex;
         flex-direction: column;
