--- a/app/training-program-plan/page.module.css
+++ b/app/training-program-plan/page.module.css
@@ -82,6 +82,18 @@
         background-position: center;
     }
 
+    .fallbackImage {
+        width: 100%;
+        margin: 1.5rem;
+        max-height: 16rem;
+        aspect-ratio: auto;
+        aspect-ratio: 1/1;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: center;
+    }
+
     .buttonContainer {
         box-sizing: border-box;
         display: flex;
